tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float32_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float32 3D tensors, coreml
 greater_or_equal :: greaterOrEqual float32 3D tensors: index 5: actual=0 expected=1 tolerance=0
  inputs: inputA: [-8.049108505249023, -5.522611141204834, -2.097508192062378, -7.455326557159424, -5.450376510620117, 9.802918434143066, -3.604517936706543, 4.088084697723389, -5.068355083465576, 1.5821936130523682, 5.675583839416504, -4.34159517288208, 1.694622278213501, 2.926734685897827, -7.00007438659668, -2.5270822048187256, 1.4437267780303955, 7.862768650054932, 5.782289028167725, 1.8712012767791748, -0.5233999490737915, 0.4343328773975372, 8.93836498260498, 1.6568396091461182]; inputB: [-7.028095245361328, 1.9109991788864136, 3.5765292644500732, 1.7167965173721311, 2.846137523651123, -2.311763048171997, -6.086130142211914, -3.437926769256592, -3.476442813873291, -2.1946563720703125, 2.9962267875671387, -5.540947914123535, 5.098470211029053, 6.775498867034912, 2.4505412578582764, 5.210598945617676, -9.710094451904297, -2.4130282402038574, 8.678308486938477, -9.449530601501465, 0.7702168822288513, -1.5186073780059814, -9.153943061828612, -4.991735935211182]
  expected output: [0, 0, 0, 0, 0, 1, 1, 1, 0, 1 ...] (len=24)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected output full nd:
[0, 0, 0, 0, 0, 1, 1, 1, 0, 1, ...] (len=24, shape=[2, 3, 4])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 3, 4];
    inputB: f32[2, 3, 4];
  }

  nodes {
    [output] = greaterOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
