tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float32_5D_and_broadcastable_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float32 5D and broadcastable 4D, coreml
 greater_or_equal :: greaterOrEqual float32 5D and broadcastable 4D: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [255, 0, 1, 8]; inputB: [0, 1, 2, 8, 0, 255]
  expected output: [1, 1, 1, 1, 0, 0, 0, 1, 0, 1 ...] (len=12)
  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=12)
  expected output full nd:
[1, 1, 1, 1, 0, 0, 0, 1, 0, 1, ...] (len=12, shape=[1, 2, 2, 1, 3])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[1, 2, 2, 1, 1];
    inputB: f32[2, 1, 1, 3];
  }

  nodes {
    [output] = greaterOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
