tests/snapshots/run_wpt_conformance__coreml_greaterOrEqual_float32_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater_or_equal.https.any.js greaterOrEqual float32 5D inputs with alternating broadcast axes, coreml
 greater_or_equal :: greaterOrEqual float32 5D inputs with alternating broadcast axes: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [1, 0, 1, 0, 1, 0, 1, 0]; inputB: [1, 1, 0, 0]
  expected output: [1, 0, 1, 0, 1, 0, 1, 0, 1, 1 ...] (len=32)
  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=32)
  expected output full nd:
[1, 0, 1, 0, 1, 0, 1, 0, 1, 1, ...] (len=32, shape=[2, 2, 2, 2, 2])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 1, 2, 1, 2];
    inputB: f32[1, 2, 1, 2, 1];
  }

  nodes {
    [output] = greaterOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
